--- a/output/team.html
+++ b/output/team.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 jumbotron mb-3 team-heading">
+            <div class="col-12 jumbotron mb-3 team-heading" style= "background-color : blue; color: pink">
                 <h1 class="text-center">My Team</h1>
             </div>
         </div>
@@ -24,28 +24,54 @@
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">s</h2>
+    <div class="card-header" style= "background-color : burlywood ">;
+        <h2 class="card-title">Nancy</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: s</li>
-            <li class="list-group-item">Email: <a href="mailto:d">d</a></li>
-            <li class="list-group-item">Office number: a</li>
+            <li class="list-group-item">ID: 25</li>
+            <li class="list-group-item">Email: <a href="mailto:nancy@email.com">nancy@email.com</a></li>
+            <li class="list-group-item">Office number: 90</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">d</h2>
+    <div class="card-header"style= "background-color :rgba(142, 94, 197, 0.589)">;
+        <h2 class="card-title">Macy</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: undefined</li>
-            <li class="list-group-item">Email: <a href="mailto:f">f</a></li>
+            <li class="list-group-item">Email: <a href="mailto:Macy@email.com">Macy@email.com</a></li>
             <li class="list-group-item">GitHub: <a href="https://github.com/undefined" target="_blank" rel="noopener noreferrer">undefined</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header"style= "background-color :cyan">;
+        <h2 class="card-title">Macy</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: undefined</li>
+            <li class="list-group-item">Email: <a href="mailto:Macy@email.com">Macy@email.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/undefined" target="_blank" rel="noopener noreferrer">undefined</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header" style="background-color:chocolate">;>
+        <h2 class="card-title">Tammy</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 26</li>
+            <li class="list-group-item">Email: <a href="mailto:tammy@email.com">tammy@email.com</a></li>
+            <li class="list-group-item">School: Rut</li>
         </ul>
     </div>
 </div>
